@@ -1,3 +1,11 @@
+2006-01-23  George Staikos <staikos@opensource.apple.com>
+
+        Approved by Maciej and Darin.
+
+        * kjs/:
+        * kxmlcore/:
+	     Update FSF address in license to make merging easier
+
 2006-01-22  George Staikos <staikos@opensource.apple.com>
 
         Reviewed by Maciej.
